# jigsaw-mcp

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  run_tests.sh  tsconfig.json
src/: __init__.py  cli.ts  config.ts  index.ts  main.py  server.ts
src/data/: components.json
src/database/: __init__.py  loader.py  models.py
src/tools/: __init__.py  component_tools.py  hello.ts  index.ts
src/transport/: http.ts  index.ts  stdio.ts
tests/: __init__.py  run_all_tests.py  test_database.py  test_dedalus_structure.py  test_server.py  test_tools.py
