[project]
name = "simple-utility-server"
version = "1.0.0"
description = "A simple MCP server with practical utility tools"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
main = "src.main:main"
